Fix alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3918,5 +3918,6 @@ input, select, textarea {
 
 .Hebrew {
 	display: flex;
+	flex-direction: column;
 	align-items: baseline;
 }
